updated footer + fixed grid whitespace
added float left to grid elements to fix whitespace (replacing comments used to eliminate whitespace)

--- a/tinkerer-con/main.scss
+++ b/tinkerer-con/main.scss
@@ -116,7 +116,9 @@ p {
 .group {
   clear: both;
 }
-
+.clear {
+  clear: left;
+}
 /*
   ============ HOME =================
 */
@@ -223,15 +225,20 @@ a {
   margin: 66px 0 22px 0;
   text-align: right;
 }
-.primary-footer small {
-  float: left;
-  font-weight: 400;
-}
+
 .primary-footer {
   color: $dark-accent;
   font-size: 14px;
   padding-bottom: 44px;
   padding-top: 44px;
+  small {
+    float: left;
+    font-weight: 400;
+  }
+  .credit {
+    float: left;
+    padding: 0 0 0 50px;
+  }
 }
 .primary-header a,
 .primary-footer a {
